--- a/source/loader.css
+++ b/source/loader.css
@@ -1,3 +1,8 @@
+body
+{
+	background-color: #0C3A65;
+}
+
 #bar 
 {
     width: 362px;
@@ -7,12 +12,13 @@
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    top: 80%;
-    left:0;
-    right:0;
-    margin-left:auto;
-    margin-right:auto;
     position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    margin: auto;
 }
 
 
@@ -26,7 +32,6 @@
 
 .background
 {
-    z-index: 10000;
     background-color: #0C3A65;
     top: 0%;
     right: 0%;
